# advent-of-code

./: .conform.yaml  .gitignore  .licensure.yml  Cargo.toml  README.md  flake.nix
advent-of-code/: Cargo.toml
advent-of-code-2024/: Cargo.toml
advent-of-code-2024/src/y2024/: day03.rs  day04.rs  day06.rs  day09.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day23.rs  day24.rs  direction.rs
advent-of-code/benches/: all_solutions.rs  individual_solutions.rs  y2024_all_solutions.rs  y2024_individual_solutions.rs  y2025_individual_solutions.rs
advent-of-code/src/: lib.rs
advent-of-code/src/y2024/: day07.rs  day10.rs  day11.rs  day14.rs  day15.rs  day21.rs  maze.rs
advent-of-code/src/y2025/: day01.rs  day02.rs  day03.rs
benches/: all_solutions.rs  individual_solutions.rs  solutions.rs
hooks/: commit-msg  pre-commit
src/: lib.rs  main.rs  y2022.rs  y2023.rs
src/y2022/: day01.rs
src/y2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
src/y2024/: day01.rs  day02.rs  day05.rs  day06.rs  day08.rs  day11.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs  day20.rs  day22.rs  day24.rs  day25.rs  graph.rs  maze.rs
