[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.75.1"
clap = { version = "4.4.10", features = ["derive"] }
nom = "7.1.3"
suggestions = "0.1.1"
thiserror = "1.0.50"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.0"
