[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "advent-of-code"
path = "src/main.rs"
bench = false

[lib]
name = "aoc"
path = "src/lib.rs"
bench = false

[[bench]]
name = "y2024_individual_solutions"
harness = false

[[bench]]
name = "y2024_all_solutions"
harness = false

[[bench]]
name = "y2025_individual_solutions"
harness = false
